Initial 1.9.4 update, minor bug fixes and balance improvements